load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

licenses(["notice"])

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "buildpacks/licenses.yaml",
    "lifecycle-v0.20.5/licenses.yaml",
])

pkg_tar(
    name = "licenses",
    srcs = glob(["**/licenses.yaml"]),
    extension = "tar",
    strip_prefix = ".",
)

filegroup(
    name = "files",
    srcs = glob(["**"]),
)
<footer>
  <p>&copy; <script>document.write(new Date().getFullYear())</script> Joseph Thornton Jr. All Rights Reserved.</p>
</footer>
